DistanceStats now defaults to only showing the main distances instead of the main and linked distances. Users can now specify if they want to see the stats for linked distances with the checkbox on the expander. Double clicking on the DistanceStat now also condenses participants into the main distances if the stats themselves are condensed.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -248,10 +248,29 @@
                     </ComboBox>
                     <Expander
                         Name="statsExpander"
-                        Header="Stats"
                         Margin="5,5,5,0"
                         IsExpanded="True"
                         >
+                        <Expander.Header>
+                            <DockPanel
+                                LastChildFill="False"
+                                VerticalAlignment="Center"
+                                >
+                                <TextBlock
+                                    Text="Stats"
+                                    Margin="0,0,0,0"
+                                    VerticalAlignment="Center"
+                                    />
+                                <ui:ToggleSwitch 
+                                    x:Name="condenseSwitch" 
+                                    Margin="0,0,10,0" 
+                                    VerticalAlignment="Center"
+                                    DockPanel.Dock="Right"
+                                    Checked="CondenseSwitch_Checked"
+                                    Unchecked="CondenseSwitch_Checked"
+                                    />
+                            </DockPanel>
+                        </Expander.Header>
                         <StackPanel>
                             <Grid Margin="3,0,3,0">
                                 <Grid.ColumnDefinitions>
